@@ -26,6 +26,8 @@ import org.apache.hadoop.nfs.nfs3.Nfs3Status;
 import org.apache.hadoop.oncrpc.XDR;
 import org.apache.hadoop.oncrpc.security.Verifier;
 
+import com.google.common.annotations.VisibleForTesting;
+
 /**
  * READDIR3 Response
  */
@@ -49,7 +51,8 @@ public class READDIR3Response extends NFS3Response {
       return fileId;
     }
 
-    String getName() {
+    @VisibleForTesting
+    public String getName() {
       return name;
     }
 
@@ -65,6 +68,11 @@ public class READDIR3Response extends NFS3Response {
     public DirList3(Entry3[] entries, boolean eof) {
       this.entries = Collections.unmodifiableList(Arrays.asList(entries));
       this.eof = eof;
+    }
+    
+    @VisibleForTesting
+    public List<Entry3> getEntries() {
+      return this.entries;
     }
   }
 
