@@ -13,6 +13,8 @@ Release 2.2.0 - 2013-10-13
 
     HDFS-5329. Update FSNamesystem#getListing() to handle inode path in startAfter
     token. (brandonli)
+    
+    HDFS-5330. fix readdir and readdirplus for large directories (brandonli)
   
     HDFS-5246. Make Hadoop nfs server port and mount daemon port
     configurable. (Jinghui Wang via brandonli)
